# osctx

./: .gitignore  CLAUDE.md  DECISIONS.md  NEXT.md  README.md  SPEC.md  STATUS.md  pyproject.toml
docs/: CONSTRAINTS.md  DATA_SAMPLE.md  DECISIONS.md  INTERFACES.md  NEXT.md  SPEC.md  STATUS.md
extension/: background.ts  build.mjs  manifest.json  package-lock.json  package.json  popup.html  popup.ts  tsconfig.json
extension/content/: chatgpt.ts  claude.ts  gemini.ts  utils.ts
osctx/cli/: doctor.py  install.py  main.py  mcp_install.py
osctx/daemon/: database.py  dedup.py  embeddings.py  extraction.py  ingestion.py  main.py  search.py
osctx/daemon/parsers/: base.py  chatgpt.py  gemini.py
osctx/daemon/ui/: search.html
osctx/mcp_server/: server.py
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: search-memory.tsx
tests/: test_extraction.py  test_parsers.py  test_search.py
