[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osctx"
version = "0.1.0"
description = "Universal memory layer for AI conversations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.3.0",
    "sqlite-vec>=0.1.6",
    "typer[all]>=0.15.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
osctx = "osctx.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["osctx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
